--- a/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
+++ b/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
@@ -78,6 +78,8 @@
 
             <app-score-forms
               [matchData]="data()?.match_data ?? null"
+              [teamColorA]="data()?.teams?.team_a?.team_color ?? '#ffffff'"
+              [teamColorB]="data()?.teams?.team_b?.team_color ?? '#ffffff'"
               (scoreChange)="onScoreChange($event)"
               (timeoutChange)="onTimeoutChange($event)"
               (qtrChange)="onQtrChange($event)"
